<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".SaveRecipeActivity">

    <Button
        android:id="@+id/saveRecipeBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_corners"
        android:text="@string/save_recipe"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSteps"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_corners"
        android:text="@string/go_back"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveRecipeBtn"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSteps" />

    <TextView
        android:id="@+id/bck"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/bottom_corners"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textDirection="locale"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/bck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bck"
        app:layout_constraintTop_toTopOf="@+id/bck"
        app:srcCompat="@mipmap/camera_foreground" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/edit_text_gray"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/name"
        android:inputType="textCapSentences|textMultiLine"
        android:isScrollContainer="false"
        android:scrollHorizontally="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bck" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/edit_text_gray"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editTextIngridients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextIngridients"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/edit_text_gray"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/ingredients"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editTextSteps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextSteps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/edit_text_gray"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/steps"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/goBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngridients" />

</androidx.constraintlayout.widget.ConstraintLayout>


